2018-08-27  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version
        * inst/include/Rcpp/config.h: Idem

	* man/Rcpp-deprecated.Rd: Fix two-char typo/thinko in \link{}

2018-07-29  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Refreshed via some edits and updates

        * DESCRIPTION (Version, Date): Roll minor version
        * inst/include/Rcpp/config.h: Idem

2018-07-28  Dirk Eddelbuettel  <edd@debian.org>

	* R/RcppLdpath.R (RcppLdPath, RcppLdFlags, CxxFlags, RcppLdFlags)
	(RcppCxx0xFlags): Marked as deprecated

	* man/Rcpp-deprecated.Rd: Add exported functions LdFlags() and
	RcppLdFlags() as deprecated
	* man/RcppLdFlags.Rd: Idem

2018-07-27  Dirk Eddelbuettel  <edd@debian.org>

	* man/loadRcppModules-deprecated.Rd: Fix typo; was deprecated in
	0.12.5, not 0.16.5 which does not exist

2018-07-26  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/Rcpp-FAQ.Rmd: Use collapse: true
	* vignettes/Rcpp-introduction.Rmd: Idem

2018-07-25  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/Rcpp-extending.Rmd: Use collapse: true

2018-07-24  Martin Lysy  <mlysy@uwaterloo.ca>

        * R/loadRcppClass.R: Search in R module for 'Class' instead of
	'CppClass'.
        * R/exposeClass.R: Fixed 'rename' argument to work as expected.
        * inst/unitTests/runit.exposeClass.R: Added unit tests for the
	above.

2018-07-23  Dirk Eddelbuettel  <edd@debian.org>

	* inst/bib/Rcpp.bib: More updates
        * vignettes/Rcpp.bib: Idem

2018-07-21  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION: Release 0.12.18
        * inst/NEWS.Rd: Idem
        * inst/bib/Rcpp.bib: Idem
        * vignettes/Rcpp.bib: Idem
        * inst/include/Rcpp/config.h: Idem

	* vignettes/Rcpp.bib: Updated other references
	* inst/bib/Rcpp.bib: Idem

	* inst/unitTests/runit.sugar.R: Additional min, max unit tests
	* inst/unitTests/cpp/sugar.cpp: Idem

2018-07-20  Dirk Eddelbuettel  <edd@debian.org>
