@@ -1,3 +1,11 @@
+2018-08-29  Dirk Eddelbuettel  <edd@debian.org>
+
+	* .travis.yml: Use Dockerfile
+
+2018-08-28  Dirk Eddelbuettel  <edd@debian.org>
+
+	* docker/Dockerfile: Add Dockerfile for use by Travis CI
+
 2018-08-27  Dirk Eddelbuettel  <edd@debian.org>
 
         * DESCRIPTION (Version, Date): Roll minor version
